# text-labelling

./: .gitignore  AGENTS.md  DESIGN.md  README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.streamlit/: config.toml  secrets.toml
src/label_app/: app_settings.yaml
src/label_app/config/: settings.py
src/label_app/data/: models.py
src/label_app/services/: annotations.py  auth.py  git_client.py  items.py  key_auth.py  projects.py
src/label_app/services/git/: __init__.py  access.py  auth.py  config.py  errors.py  flusher.py  ops.py  repo_fs.py  urls.py
src/label_app/services/github/: __init__.py  access.py  auth.py  branch_tracker.py  config.py  install_link.py  ops.py  urls.py
src/label_app/services/persistent_state/: core.py  current_item.py  project.py  version_selection.py
src/label_app/ui/: auth_ui.py  main.py
src/label_app/ui/components/: access_fix.py  annotation_view.py  auth.py  chat_view.py  cookies.py  label_pills.py  nav_row.py  navigation.py  project.py  version_selection.py
src/label_app/ui/page/: 01_login.py  02_project_select.py  03_annotate.py  03_instructions.py  04_annotate.py  05_statistics.py
src/label_app/ui/pages/: 01_login.py  02_project_select.py  03_annotate.py
src/label_app/utils/: lock.py
