[project]
name = "label_app"
version = "0.0.1"
dependencies = [
    "streamlit>=1.35",
    "streamlit-hotkeys>=0.6.0",
    "pydantic[email]",
    "PyYAML",
    "PyJWT",
    "Authlib",
    "GitPython>=3.1",
    "platformdirs"
]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["label_app*"]

[tool.setuptools.package-data]
"label_app.ui.components.cookie_ninja" = ["frontend/*"]
